# mnemix

./: .gitignore  README.md  pyproject.toml
docs/: design.md
examples/: basic_proxy.py  cost_savings_demo.py  namespace_demo.py
src/mnemix/: __init__.py  bypass.py  embedding.py  proxy.py  redis_store.py  store.py  types.py
tests/: test_bypass.py  test_embedding.py  test_proxy.py  test_redis_store.py  test_smoke.py  test_store.py  test_types.py
